<resources>
    <string name="app_name">HW2</string>
    <string name="temptext">tempText</string>
    <string name="back">Back</string>
    <string name="avengers_end_game">Avengers:
        End Game</string>
    <string name="avengers">Avengers:</string>
    <string name="end_game">End Game</string>
    <string name="_13">13+</string>
    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="_125_review">125 REVIEW</string>
    <string name="_125_reviews">125 REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="movies_list">Movies list</string>
    <string name="action_adventure_drama">Action, Adventure, Drama</string>
    <string name="_137_min">137 min</string>
</resources>