<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191926"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/mainImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/orig"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitStart"
                android:src="@drawable/mask"
                app:layout_constraintBottom_toBottomOf="@+id/mainImage"
                app:layout_constraintTop_toTopOf="@+id/mainImage" />

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="59dp"
                android:src="@drawable/path"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@drawable/back"
                app:layout_constraintStart_toEndOf="@+id/arrow"
                app:layout_constraintTop_toTopOf="@+id/arrow" />

            <ImageView
                android:id="@+id/rectangles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/rectangle"
                app:layout_constraintBottom_toTopOf="@+id/name1"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_13"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/rectangles"
                app:layout_constraintEnd_toEndOf="@id/rectangles"
                app:layout_constraintStart_toStartOf="@id/rectangles"
                app:layout_constraintTop_toTopOf="@id/rectangles" />

            <TextView
                android:id="@+id/name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/avengers"
                android:textColor="@color/whiteColorECECEC"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/mainImage"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/end_game"
                android:textColor="@color/whiteColorECECEC"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mainImage" />

            <TextView
                android:id="@+id/tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/action_adventure_fantasy"
                android:textColor="#FF3466"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name2" />

            <!--    <TextView-->
            <!--        android:layout_width="wrap_content"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:text="@string/temptext"-->
            <!--        android:textColor="#FF3466"-->
            <!--        app:layout_constraintBaseline_toBaselineOf="@id/name1"-->
            <!--        app:layout_constraintStart_toStartOf="parent"/>-->

            <ImageView
                android:id="@+id/star1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/star_icon_red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tags" />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3.25dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/star_icon_red"
                app:layout_constraintStart_toEndOf="@id/star1"
                app:layout_constraintTop_toBottomOf="@id/tags" />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3.25dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/star_icon_red"
                app:layout_constraintStart_toEndOf="@id/star2"
                app:layout_constraintTop_toBottomOf="@id/tags" />

            <ImageView
                android:id="@+id/star4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3.25dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/star_icon_red"
                app:layout_constraintStart_toEndOf="@id/star3"
                app:layout_constraintTop_toBottomOf="@id/tags" />

            <ImageView
                android:id="@+id/star5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3.25dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/star_icon_grey"
                app:layout_constraintStart_toEndOf="@id/star4"
                app:layout_constraintTop_toBottomOf="@id/tags" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8.89dp"
                android:layout_marginTop="3dp"
                android:text="@string/_125_reviews"
                android:textColor="#6D6D80"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/star5"
                app:layout_constraintTop_toBottomOf="@id/tags" />

            <TextView
                android:id="@+id/storyline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:text="@string/storyline"
                android:textColor="@color/whiteColorECECEC"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/star1" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="6dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/description"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storyline" />

            <TextView
                android:id="@+id/cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/cast"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />


            <ImageView
                android:id="@+id/actor1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:src="@drawable/actor1"
                app:layout_constraintEnd_toStartOf="@id/actor2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast" />

            <ImageView
                android:id="@+id/actor2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:src="@drawable/actor2"
                app:layout_constraintEnd_toStartOf="@id/actor3"
                app:layout_constraintStart_toEndOf="@id/actor1"
                app:layout_constraintTop_toBottomOf="@+id/cast" />

            <ImageView
                android:id="@+id/actor3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:src="@drawable/actor3"
                app:layout_constraintEnd_toStartOf="@id/actor4"
                app:layout_constraintStart_toEndOf="@id/actor2"
                app:layout_constraintTop_toBottomOf="@+id/cast" />

            <ImageView
                android:id="@+id/actor4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:src="@drawable/actor4"
                app:layout_constraintStart_toEndOf="@id/actor3"
                app:layout_constraintTop_toBottomOf="@+id/cast" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/robert_downey_jr"
                android:textColor="@color/whiteColorECECEC"
                app:layout_constraintEnd_toEndOf="@id/actor1"
                app:layout_constraintStart_toStartOf="@id/actor1"
                app:layout_constraintTop_toBottomOf="@id/actor1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/chris_evans"
                android:textColor="@color/whiteColorECECEC"
                app:layout_constraintEnd_toEndOf="@id/actor2"
                app:layout_constraintStart_toStartOf="@id/actor2"
                app:layout_constraintTop_toBottomOf="@id/actor2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/mark_ruffalo"
                android:textColor="@color/whiteColorECECEC"
                app:layout_constraintEnd_toEndOf="@id/actor3"
                app:layout_constraintStart_toStartOf="@id/actor3"
                app:layout_constraintTop_toBottomOf="@id/actor3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/chris_hemsworth"
                android:textColor="@color/whiteColorECECEC"
                app:layout_constraintEnd_toEndOf="@id/actor4"
                app:layout_constraintStart_toStartOf="@id/actor4"
                app:layout_constraintTop_toBottomOf="@id/actor4" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>